@@ -1,4 +1,4 @@
-LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.917 $>
+LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.918 $>
 
 
 [Note: This file does not mention every change made to the NetBSD source tree.
@@ -216,3 +216,5 @@ Changes from NetBSD 4.0 to NetBSD 5.0:
 	build.sh: Add iso-dir=directory option which when combined with
 		iso-image or iso-image-source causes directory to be
 		added to the CD-ROM image. [jnemeth 20070901]
+	build.sh; Convert iso-dir=dircectory option to -C cddir.
+		[jnemeth 20070901]
